--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
     implementation 'com.willowtreeapps.spruce:spruce-android:1.0.1'
+    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
 
 }
